# scout-engine

./: .gitmodules  CMakeLists.txt  readme.md
hike/: CMakeLists.txt  HikeApp.cpp  HikeApp.h  readme.md
scout/: CMakeLists.txt  Scout.h  readme.md
scout/Scout/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  Log.cpp  Log.h  Window.h
scout/Scout/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
